[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/enemies/ravemet.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/enemies/ravemet.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/se/Hit.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/se/Throw.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle2"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "open"
length = 0.21
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "throw"
length = 0.28
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[node name="ravemet" type="KinematicBody2D" groups=[
"enemies",
]]
pause_mode = 1
collision_layer = 66
collision_mask = 0
script = ExtResource( 1 )

[node name="coll_box" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="hit_box" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 33
collision_mask = 4

[node name="box" type="CollisionShape2D" parent="hit_box"]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 2 )
hframes = 8

[node name="anim" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/idle2 = SubResource( 3 )
anims/open = SubResource( 4 )
anims/throw = SubResource( 5 )

[node name="on_screen" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -8, -8, 16, 16 )

[node name="hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="throw" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="hit_box" to="." method="_on_hit_box_body_entered"]
[connection signal="body_exited" from="hit_box" to="." method="_on_hit_box_body_exited"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_finished"]
[connection signal="screen_exited" from="on_screen" to="." method="_on_screen_exited"]
